--- a/.github/workflows/build-pdf.yml
+++ b/.github/workflows/build-pdf.yml
@@ -20,12 +20,12 @@ jobs:
   build-pdf:
     uses: kolosovpetro/github-latex-template/.github/workflows/build-pdf-template.yml@main
     with:
-      file_name: 'GithubLatexTemplate'
+      file_name: 'MathStackOverflowQuestion'
       runs_on: 'ubuntu-latest'
       workflow_name: 'Build PDF'
       build_assets_path: |
-        src/GithubLatexTemplate.tex
-        src/GithubLatexTemplate.bbl
-        src/GithubLatexTemplate.bib
+        src/MathStackOverflowQuestion.tex
+        src/MathStackOverflowQuestion.bbl
+        src/MathStackOverflowQuestion.bib
         src/sections
       working_directory_for_latex: 'src'
